# vortex

./: CMakeLists.txt  timings.txt
OTF2_archive/: .locality.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
OTF2_archive/APEX/: 0.evt
m4/: kernels.m4
src/: datapoints.cpp  hpx-main.cpp  kernels.cpp  main.cpp  omp-main.cpp  run-tests.cpp  tree.cpp
test-data/: InputData.txt  dScript.m
timing/: timing-simple-master.txt  timing.txt  timings-better.txt
trace_files/OTF2_archive_15_runs_good/: .locality.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
trace_files/OTF2_archive_15_runs_good/APEX/: 0.evt
trace_files/OTF2_archive_3NICE/: .locality.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
trace_files/OTF2_archive_3NICE/APEX/: 1.evt  2.evt  3.evt  4.evt
trace_files/OTF2_archive_3NICETOO/: .locality.0  .regions.0  APEX.def  APEX.otf2
trace_files/OTF2_archive_3NICETOO/APEX/: 1.evt  2.evt  3.evt  4.evt
trace_files/OTF2_archive_3REPRISES/: .locality.0  .regions.0  APEX.def  APEX.otf2
trace_files/OTF2_archive_3REPRISES/APEX/: 0.evt  1.evt  2.evt  3.evt  4.evt
trace_files/OTF2_archive_ORIG/: .locality.0  .regions.0  APEX.def  APEX.otf2
trace_files/OTF2_archive_ORIG/APEX/: 0.evt  1.evt  2.evt  3.evt  4.evt
trace_files/OTF2_archive_annotated/: .locality.0  .regions.0  APEX.def  APEX.otf2
trace_files/OTF2_archive_annotated/APEX/: 0.evt  1.evt  2.evt  3.evt  4.evt
trace_files/OTF2_archive_exec_on_certain_quadrants/: .locality.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
trace_files/OTF2_archive_exec_on_certain_quadrants/APEX/: 0.evt
trace_files/OTF2_archive_task_threshold_25000/: .locality.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
trace_files/OTF2_archive_task_threshold_25000/APEX/: 0.evt  1.evt  2.evt  3.evt  4.evt
trace_files/OTF2_archive_taskthreshold=25000/: .locality.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
trace_files/OTF2_archive_taskthreshold=25000/APEX/: 1.evt  2.evt  3.evt  4.evt
trace_files/OTF2_archive_types_of_tasks_on_specific_OS_threads_WITH_STEALING/: .locality.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
trace_files/OTF2_archive_types_of_tasks_on_specific_OS_threads_WITH_STEALING/APEX/: 0.evt  1.evt  2.evt  3.evt
trace_files/OTF2_archive_types_of_tasks_on_specisif_OS_threads/: .locality.0  .metrics.0  .regions.0  APEX.def  APEX.otf2  APEX.vsettings
trace_files/OTF2_archive_types_of_tasks_on_specisif_OS_threads/APEX/: 0.evt  1.evt  2.evt  3.evt
vrtx/: datapoints.h  kernels.h  simulation.h  tree.h  tree_prepare.h
